<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".Challenges">

    <TextView
        android:id="@+id/lblBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Back"
        android:textColor="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvChallenges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sedansc_regular"
        android:layout_below="@+id/lblBack"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/Challenges"/>

    <TextView
        android:id="@+id/tvPointsEarned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChallenges"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/PointEarnedHeading"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pointsEarnedIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChallenges"
        android:layout_alignParentEnd="true"
        android:background="#FF0000"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:max="100"
        />

    <TextView
        android:id="@+id/tvWeeklyChallengesHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pointsEarnedIndicator"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/WeeklyChallenges"/>

</RelativeLayout>