<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".UserSettings">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserName"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserEmail"
        android:layout_below="@+id/tvUserName"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/tvSettingsSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:layout_below="@+id/tvUserEmail"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/lineBelowSettings"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:alpha="0.3"
        android:layout_below="@+id/tvSettingsSubHeading"
        />
    <TextView
        android:id="@+id/tvUnitsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Units"
        android:layout_below="@+id/lineBelowSettings"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <LinearLayout
        android:id="@+id/linUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lineBelowSettings"
        android:layout_toEndOf="@+id/tvUnitsHeading"
        android:gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btnMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Metric"
            android:textColor="@color/white"
            android:backgroundTint="@color/clickedMetric" />

        <Button
            android:id="@+id/btnImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imperial"
            android:textColor="@color/white"
            android:backgroundTint="@color/app_background" />

    </LinearLayout>

    <!--Add 2 buttons here-->

    <View
        android:id="@+id/lineBelowUnits"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:alpha="0.3"
        android:layout_below="@+id/linUnits"
        />

    <TextView
        android:id="@+id/tvMaxRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaxRadius"
        android:layout_below="@+id/lineBelowUnits"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderDistance"
        android:contentDescription="a"
        android:layout_width="200dp"
        android:valueFrom="5.0"
        android:valueTo="50.0"
        android:stepSize="5.0"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_height="50dp"
        android:layout_below="@+id/lineBelowUnits"
        />
    <!--Add Slider-->


    <View
        android:id="@+id/lineBelowRadius"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvMaxRadius"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.3"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:layout_below="@+id/lineBelowRadius"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <View
        android:id="@+id/lineBelowAbout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvAbout"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.3"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/tvAboutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TempText"
        android:layout_below="@+id/lineBelowAbout"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvAboutContent"
        android:src="@drawable/logo"
        />

</RelativeLayout>