<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".Settings">

    <TextView
        android:id="@+id/tvBackSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_margin="16dp"
        android:layout_toEndOf="@id/tvBackSettings"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:textColor="@color/white"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:paddingBottom="6dp"
        app:tabIndicatorColor="@color/tab_indicator"
        android:layout_below="@+id/tvBackSettings"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabTextColor="@color/white">
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout"
        android:contentDescription="sd"
        android:layout_marginTop="48dp" />

</RelativeLayout>