<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:startIconTint="@color/white"
        style="@style/MyTextInputLayoutStyle"
        app:startIconDrawable="@drawable/person"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/user_Name"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:startIconDrawable="@drawable/baseline_mail_outline_24"
        style="@style/MyTextInputLayoutStyle"
        android:hint="@string/emailHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/userEmail"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        style="@style/MyTextInputLayoutStyle"
        android:hint="@string/passwordHint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/userPassword"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        style="@style/MyTextInputLayoutStyle"
        android:hint="@string/repeatPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/userRepeatPassword"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:elevation="40dp"
        android:backgroundTint="@color/tab_indicator"
        android:layout_centerHorizontal="true"
        android:text="@string/signUp"
        />

    <ImageView
        android:id="@+id/ivBottomLogo"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnSignIn"
        android:src="@drawable/logo"
        android:contentDescription="@string/Logo"
        android:layout_marginBottom="40dp"
        />

</RelativeLayout>